# doujin-shelf

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
scripts/: deploy-android.sh  deploy-ios.sh
src/: App.tsx  global.d.ts  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BottomNav.tsx  EmptyState.tsx  HeartIcon.tsx  ImportStats.tsx  RandomView.tsx  SearchBar.tsx  SearchFAB.tsx  SearchModal.tsx  SettingsView.tsx  WorkCard.tsx  WorkModal.tsx
src/utils/: csvParser.ts
